force-app/main/default/objects/Launchpad__Applicant_Tracking__c/Launchpad__Applicant_Tracking__c.object-meta.xml
<CustomObject>
    <description>This Object is used by Job Seekers to apply for Jobs in the system.</description>
    <label>Job Application</label>
    <nameField>
        <displayFormat>App-{0}</displayFormat>
        <label>Application Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Job Applications</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>