force-app/main/default/objects/Launchpad__Applicant_Tracking__c/fields/Any_other_source_not_named_above__c.field-meta.xml
<CustomField>
    <fullName>Any_other_source_not_named_above__c</fullName>
    <label>Any other source not named above</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>