force-app/main/default/objects/Launchpad__Applicant_Tracking__c/fields/Applican_ts_City__c.field-meta.xml
<CustomField>
    <fullName>Applican_ts_City__c</fullName>
    <label>Applicant&apos;s City [DEFUNCT]</label>
    <length>80</length>
    <type>Text</type>
</CustomField>