force-app/main/default/objects/Launchpad__Applicant_Tracking__c/fields/Applicant_Blind_Difficulty_Seeing__c.field-meta.xml
<CustomField>
    <fullName>Applicant_Blind_Difficulty_Seeing__c</fullName>
    <inlineHelpText>Is the applicant blind or have serious difficulty seeing? Even when wearing glasses or contact lenses?</inlineHelpText>
    <label>Applicant Blind/Difficulty Seeing?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Prefer not to say</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>