force-app/main/default/objects/Launchpad__Applicant_Tracking__c/fields/Applicant_City__c.field-meta.xml
<CustomField>
    <fullName>Applicant_City__c</fullName>
    <label>Applicant&apos;s City</label>
    <length>80</length>
    <type>Text</type>
</CustomField>