force-app/main/default/objects/Launchpad__Applicant_Tracking__c/fields/Applicant_CPS_DHS__c.field-meta.xml
<CustomField>
    <fullName>Applicant_CPS_DHS__c</fullName>
    <inlineHelpText>Does the applicant have any current or former involvement with Child Protective Services/DHS?</inlineHelpText>
    <label>Applicant Involved with CPS/DHS</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Prefer not to say</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>