force-app/main/default/objects/Launchpad__Applicant_Tracking__c/fields/Applicant_Deaf_Difficulty_Hearing__c.field-meta.xml
<CustomField>
    <fullName>Applicant_Deaf_Difficulty_Hearing__c</fullName>
    <inlineHelpText>Is the applicant deaf or have serious difficulty hearing?</inlineHelpText>
    <label>Applicant Deaf/Difficulty Hearing?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Prefer not to say</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>