force-app/main/default/objects/Launchpad__Applicant_Tracking__c/fields/Applicant_Involved_in_Justice_System__c.field-meta.xml
<CustomField>
    <fullName>Applicant_Involved_in_Justice_System__c</fullName>
    <inlineHelpText>Does the applicant have any current or former involvement with the justice system?</inlineHelpText>
    <label>Applicant Involved in Justice System?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Prefer not to say</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>