force-app/main/default/objects/Launchpad__Applicant_Tracking__c/fields/Applicant_Involved_with__c.field-meta.xml
<CustomField>
    <fullName>Applicant_Involved_with__c</fullName>
    <label>Applicant involved with DHS [DEFUNCT]</label>
    <length>80</length>
    <type>Text</type>
</CustomField>