force-app/main/default/objects/Launchpad__Applicant_Tracking__c/fields/Applicant_Medical_Conditions__c.field-meta.xml
<CustomField>
    <fullName>Applicant_Medical_Conditions__c</fullName>
    <inlineHelpText>Does the applicant have any medical conditions requiring treatment?</inlineHelpText>
    <label>Applicant Medical Conditions?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Prefer not to say</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>