force-app/main/default/objects/Launchpad__Applicant_Tracking__c/fields/Applicant_Mental_Health_Diagnosis__c.field-meta.xml
<CustomField>
    <fullName>Applicant_Mental_Health_Diagnosis__c</fullName>
    <inlineHelpText>Has the applicant ever received a mental health diagnosis?</inlineHelpText>
    <label>Applicant Mental Health Diagnosis?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Prefer not to say</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>