force-app/main/default/objects/Launchpad__Applicant_Tracking__c/fields/Applicant_Need_Support_Assistance__c.field-meta.xml
<CustomField>
    <fullName>Applicant_Need_Support_Assistance__c</fullName>
    <inlineHelpText>Does the applicant or their family need support or assistance with any of the following?</inlineHelpText>
    <label>Applicant Need Support/Assistance?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>Medical assistance</fullName>
            </value>
            <value>
                <fullName>Medical or Dental Care</fullName>
            </value>
            <value>
                <fullName>Access to Food</fullName>
            </value>
            <value>
                <fullName>Housing</fullName>
            </value>
            <value>
                <fullName>Mental health services</fullName>
            </value>
            <value>
                <fullName>Substance use services</fullName>
            </value>
            <value>
                <fullName>Service coordination or Support services</fullName>
            </value>
            <value>
                <fullName>Legal services</fullName>
            </value>
            <value>
                <fullName>Employment or Job development services</fullName>
            </value>
            <value>
                <fullName>Education</fullName>
            </value>
            <value>
                <fullName>Service coordination and Management</fullName>
            </value>
            <value>
                <fullName>Prefer not to say</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>