force-app/main/default/objects/Launchpad__Applicant_Tracking__c/fields/Applicant_s_Age__c.field-meta.xml
<CustomField>
    <fullName>Applicant_s_Age__c</fullName>
    <formula>IF( NOT( ISBLANK( Applicant_s_Date_of_Birth_MM_DD_YYYY__c) ) ,
  IF( DATE( 2000 , MONTH( Applicant_s_Date_of_Birth_MM_DD_YYYY__c) , DAY( Applicant_s_Date_of_Birth_MM_DD_YYYY__c ) ) &lt;= DATE( 2000 , MONTH( TODAY() ) , DAY( TODAY() ) ),
     YEAR (Today()) - YEAR ( Applicant_s_Date_of_Birth_MM_DD_YYYY__c ),
     YEAR (Today()) - YEAR ( Applicant_s_Date_of_Birth_MM_DD_YYYY__c ) -1 ),
  null)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Applicant&apos;s Age</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>