force-app/main/default/objects/Launchpad__Applicant_Tracking__c/fields/Applicant_s_Age_at_Start_of_Program__c.field-meta.xml
<CustomField>
    <fullName>Applicant_s_Age_at_Start_of_Program__c</fullName>
    <formula>IF(
    NOT(ISBLANK(Applicant_s_Date_of_Birth_MM_DD_YYYY__c)) &amp;&amp;
    NOT(ISBLANK(Launchpad__Participant__r.Enrollment__r.Launchpad__Program__r.Application_Close_Date__c)),
    FLOOR(
        (Launchpad__Participant__r.Enrollment__r.Launchpad__Program__r.Application_Close_Date__c - 
         Applicant_s_Date_of_Birth_MM_DD_YYYY__c) / 365.25
    ),
    null
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Applicant&apos;s Age at Start of Program</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>