force-app/main/default/objects/Launchpad__Applicant_Tracking__c/fields/Applicant_s_Current_Employment_Status__c.field-meta.xml
<CustomField>
    <fullName>Applicant_s_Current_Employment_Status__c</fullName>
    <label>Applicant&apos;s Current Employment Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Unemployed</fullName>
            </value>
            <value>
                <fullName>Employed Part-Time</fullName>
            </value>
            <value>
                <fullName>Employed Full-Time</fullName>
            </value>
            <value>
                <fullName>Unpaid volunteer or peer work</fullName>
            </value>
            <value>
                <fullName>Full-Time Student</fullName>
            </value>
            <value>
                <fullName>Out of the work force</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>