force-app/main/default/objects/Launchpad__Applicant_Tracking__c/fields/Applicant_s_Current_Gender__c.field-meta.xml
<CustomField>
    <fullName>Applicant_s_Current_Gender__c</fullName>
    <label>Applicant&apos;s Current Gender</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>Male</fullName>
            </value>
            <value>
                <fullName>Female</fullName>
            </value>
            <value>
                <fullName>Non-Binary</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Prefer not to say</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>