force-app/main/default/objects/Launchpad__Applicant_Tracking__c/fields/Applicant_s_Current_Most_Recent_School__c.field-meta.xml
<CustomField>
    <fullName>Applicant_s_Current_Most_Recent_School__c</fullName>
    <label>[DEFUNCT] School</label>
    <type>TextArea</type>
</CustomField>