force-app/main/default/objects/Launchpad__Applicant_Tracking__c/fields/Applicant_s_Date_of_Birth_MM_DD_YYYY__c.field-meta.xml
<CustomField>
    <fullName>Applicant_s_Date_of_Birth_MM_DD_YYYY__c</fullName>
    <label>Applicant&apos;s Date of Birth</label>
    <type>Date</type>
</CustomField>