force-app/main/default/objects/Launchpad__Applicant_Tracking__c/fields/Applicant_s_Email_Address__c.field-meta.xml
<CustomField>
    <fullName>Applicant_s_Email_Address__c</fullName>
    <inlineHelpText>Email address for the applicant</inlineHelpText>
    <label>Applicant&apos;s Email Address</label>
    <required>true</required>
    <type>Email</type>
</CustomField>