force-app/main/default/objects/Launchpad__Applicant_Tracking__c/fields/Applicant_s_Internet_Connectivity__c.field-meta.xml
<CustomField>
    <fullName>Applicant_s_Internet_Connectivity__c</fullName>
    <inlineHelpText>What best describes the applicant&apos;s internet connectivity</inlineHelpText>
    <label>Applicant&apos;s Internet Connectivity</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Has access to the internet at home through a fixed connection e.g., DSL, fiber, cable, etc., satellite, fixed wireless</fullName>
            </value>
            <value>
                <fullName>Has access to the internet primarily through a phone</fullName>
            </value>
            <value>
                <fullName>Has access to the internet in public spaces e.g., library, businesses, school.</fullName>
            </value>
            <value>
                <fullName>Does not have internet connectivity</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>