force-app/main/default/objects/Launchpad__Applicant_Tracking__c/fields/Applicant_s_Legal_First_Name__c.field-meta.xml
<CustomField>
    <fullName>Applicant_s_Legal_First_Name__c</fullName>
    <formula>Launchpad__Participant__r.FirstName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>As it appears on Birth Cert</inlineHelpText>
    <label>Applicant&apos;s Legal First Name</label>
    <type>Text</type>
</CustomField>