force-app/main/default/objects/Launchpad__Applicant_Tracking__c/fields/Applicant_s_Legal_Last_Name__c.field-meta.xml
<CustomField>
    <fullName>Applicant_s_Legal_Last_Name__c</fullName>
    <formula>Launchpad__Participant__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Applicant&apos;s Legal Last Name</label>
    <type>Text</type>
</CustomField>