force-app/main/default/objects/Launchpad__Applicant_Tracking__c/fields/Applicant_s_Legal_Middle_Name__c.field-meta.xml
<CustomField>
    <fullName>Applicant_s_Legal_Middle_Name__c</fullName>
    <formula>Launchpad__Participant__r.MiddleName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Applicant&apos;s Legal Middle Name</label>
    <type>Text</type>
</CustomField>