force-app/main/default/objects/Launchpad__Applicant_Tracking__c/fields/Applicant_s_Monthly_Gross_Income__c.field-meta.xml
<CustomField>
    <fullName>Applicant_s_Monthly_Gross_Income__c</fullName>
    <inlineHelpText>What is the applicant&apos;s estimated monthly gross income? (Before Taxes)</inlineHelpText>
    <label>Applicant&apos;s Monthly Gross Income</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No Income</fullName>
            </value>
            <value>
                <fullName>Less than $100</fullName>
            </value>
            <value>
                <fullName>$100 to $499</fullName>
            </value>
            <value>
                <fullName>$500 to $999</fullName>
            </value>
            <value>
                <fullName>$1,000 to $1,499</fullName>
            </value>
            <value>
                <fullName>$1,500 to $1,999</fullName>
            </value>
            <value>
                <fullName>$2,000 to $2,499</fullName>
            </value>
            <value>
                <fullName>$2,500 to $2,999</fullName>
            </value>
            <value>
                <fullName>$3,000 to $3,499</fullName>
            </value>
            <value>
                <fullName>$3,500 to $3,999</fullName>
            </value>
            <value>
                <fullName>$4,000 to $4,499</fullName>
            </value>
            <value>
                <fullName>$4,500 to $4,999</fullName>
            </value>
            <value>
                <fullName>$5,000 to $5,499</fullName>
            </value>
            <value>
                <fullName>More than $5,500</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>