force-app/main/default/objects/Launchpad__Applicant_Tracking__c/fields/Applicant_s_Phone_Number__c.field-meta.xml
<CustomField>
    <fullName>Applicant_s_Phone_Number__c</fullName>
    <inlineHelpText>Enter only digits (ex: 1234567890)</inlineHelpText>
    <label>Applicant&apos;s Phone Number</label>
    <type>Phone</type>
</CustomField>