force-app/main/default/objects/Launchpad__Applicant_Tracking__c/fields/Applicant_s_Preferred_Name__c.field-meta.xml
<CustomField>
    <fullName>Applicant_s_Preferred_Name__c</fullName>
    <label>Applicant&apos;s Preferred Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>