force-app/main/default/objects/Launchpad__Applicant_Tracking__c/fields/Applicant_s_Preferred_Pronoun__c.field-meta.xml
<CustomField>
    <fullName>Applicant_s_Preferred_Pronoun__c</fullName>
    <label>Applicant&apos;s Preferred Pronoun</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>He/Him</fullName>
            </value>
            <value>
                <fullName>She/Her</fullName>
            </value>
            <value>
                <fullName>They/Them</fullName>
            </value>
            <value>
                <fullName>Ze/Hir</fullName>
            </value>
            <value>
                <fullName>No Pronoun Identified</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>