force-app/main/default/objects/Launchpad__Applicant_Tracking__c/fields/Applicant_s_Sex_Assigned_at_Birth__c.field-meta.xml
<CustomField>
    <fullName>Applicant_s_Sex_Assigned_at_Birth__c</fullName>
    <label>Applicant&apos;s Sex Assigned at Birth</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Male</fullName>
            </value>
            <value>
                <fullName>Female</fullName>
            </value>
            <value>
                <fullName>None</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>