force-app/main/default/objects/Launchpad__Applicant_Tracking__c/fields/Applicant_s_Social_Security_Number__c.field-meta.xml
<CustomField>
    <fullName>Applicant_s_Social_Security_Number__c</fullName>
    <inlineHelpText>XXX-XXX-XXXX</inlineHelpText>
    <label>Applicant&apos;s Social Security Number</label>
    <length>12</length>
    <type>Text</type>
</CustomField>