force-app/main/default/objects/Launchpad__Applicant_Tracking__c/fields/Applicant_s_State__c.field-meta.xml
<CustomField>
    <fullName>Applicant_s_State__c</fullName>
    <label>Applicant&apos;s State</label>
    <length>255</length>
    <type>Text</type>
</CustomField>