force-app/main/default/objects/Launchpad__Applicant_Tracking__c/fields/Applicant_s_Status__c.field-meta.xml
<CustomField>
    <fullName>Applicant_s_Status__c</fullName>
    <label>Applicant&apos;s Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>Submitted</fullName>
            </value>
            <value>
                <fullName>Shortlisted</fullName>
            </value>
            <value>
                <fullName>Passed</fullName>
            </value>
            <value>
                <fullName>Unavailable</fullName>
            </value>
            <value>
                <fullName>Provider Selected, Awaiting Match</fullName>
            </value>
            <value>
                <fullName>Matched with Provider</fullName>
            </value>
            <value>
                <fullName>Placed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>