force-app/main/default/objects/Launchpad__Applicant_Tracking__c/fields/Applicant_s_Street_Address__c.field-meta.xml
<CustomField>
    <fullName>Applicant_s_Street_Address__c</fullName>
    <label>Applicant&apos;s Street Address</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>