force-app/main/default/objects/Launchpad__Applicant_Tracking__c/fields/Applicant_s_Zip_Code__c.field-meta.xml
<CustomField>
    <fullName>Applicant_s_Zip_Code__c</fullName>
    <label>Applicant&apos;s Zip Code</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>