force-app/main/default/objects/Launchpad__Applicant_Tracking__c/fields/Applicants_Current_Most_Recent_School__c.field-meta.xml
<CustomField>
    <fullName>Applicants_Current_Most_Recent_School__c</fullName>
    <label>Applicant&apos;s Current/Most Recent School</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Schools</valueSetName>
    </valueSet>
</CustomField>