force-app/main/default/objects/Launchpad__Applicant_Tracking__c/fields/Applicants_DOB_Readonly__c.field-meta.xml
<CustomField>
    <fullName>Applicants_DOB_Readonly__c</fullName>
    <formula>Applicant_s_Date_of_Birth_MM_DD_YYYY__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Applicant&apos;s Date of Birth</label>
    <type>Date</type>
</CustomField>