force-app/main/default/objects/Launchpad__Applicant_Tracking__c/fields/Applicants_Last_Completed_Grade__c.field-meta.xml
<CustomField>
    <fullName>Applicants_Last_Completed_Grade__c</fullName>
    <label>Applicant&apos;s Last Completed Grade[DEFUNCT</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Grades</valueSetName>
    </valueSet>
</CustomField>