force-app/main/default/objects/Launchpad__Applicant_Tracking__c/fields/Applicants_Tax_Id__c.field-meta.xml
<CustomField>
    <fullName>Applicants_Tax_Id__c</fullName>
    <inlineHelpText>Enter your Social Security Number as 9 digits</inlineHelpText>
    <label>Applicants Social Security Number</label>
    <length>11</length>
    <maskChar>asterisk</maskChar>
    <maskType>ssn</maskType>
    <type>EncryptedText</type>
</CustomField>