force-app/main/default/objects/Launchpad__Applicant_Tracking__c/fields/Applicants_Zip_Code__c.field-meta.xml
<CustomField>
    <fullName>Applicants_Zip_Code__c</fullName>
    <label>Applicant&apos;s Zip Code</label>
    <length>5</length>
    <type>Text</type>
</CustomField>