force-app/main/default/objects/Launchpad__Applicant_Tracking__c/fields/C2L_Placement_Site__c.field-meta.xml
<CustomField>
    <fullName>C2L_Placement_Site__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>C2L Placement Site</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Applications</relationshipLabel>
    <relationshipName>Job_Applications</relationshipName>
    <type>Lookup</type>
</CustomField>