force-app/main/default/objects/Launchpad__Applicant_Tracking__c/fields/Clearance_Requested_Through_Justifacts__c.field-meta.xml
<CustomField>
    <fullName>Clearance_Requested_Through_Justifacts__c</fullName>
    <label>Clearance Requested Through Justifacts?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
                <default>true</default>
                <label>None</label>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>